add features : feedback
